[ADD] Implementacion de swagger y documentado ClientController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.hibernate.SQL=debug
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
