[CHG] Se agrega JWT_KEY y JWT_EXPIRED

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+jwt.secret={JWT_SECRET}
+jwt.expiration={JWT_EXPIRATION}
