--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 jwt.secret={JWT_SECRET}
 jwt.expiration={JWT_EXPIRATION}
+
+ClientController.index.value=Encontrar el listado de todos los clientes
