[CHG] Se agrega mensajes para la documentacion de swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,30 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 jwt.secret={JWT_SECRET}
 jwt.expiration={JWT_EXPIRATION}
 
+# Mensajes para la documentacion en swagger
+AuthController.register.value=Registrar un usuario
+AuthController.login.value=Iniciar sesion
+
 ClientController.index.value=Encontrar el listado de todos los clientes
+ClientController.show.value=Encontrar un cliente por id
+ClientController.create.value=Ingresar un nuevo cliente
+ClientController.update.value=Actualizar los datos de un cliente por id
+ClientController.delete.value=Eliminar un cliente por el id
+
+AuthorController.index.value=Encontrar el listado de todos los autores
+AuthorController.show.value=Encontrar un autor por id
+AuthorController.create.value=Ingresar un nuevo autor
+AuthorController.update.value=Actualizar los datos de un autor por id
+AuthorController.delete.value=Eliminar un autor por el id
+
+GenreController.index.value=Encontrar el listado de todos los generos
+GenreController.show.value=Encontrar un genero por id
+GenreController.create.value=Ingresar un nuevo genero
+GenreController.update.value=Actualizar los datos de un genero por id
+GenreController.delete.value=Eliminar un genero por el id
+
+UserController.index.value=Encontrar el listado de todos los usuarios
+UserController.show.value=Encontrar un usuario por id
+UserController.create.value=Ingresar un nuevo usuario
+UserController.update.value=Actualizar los datos de un usuario por id
+UserController.delete.value=Eliminar un usuario por el id
