[ADD] se agregan mensajes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,9 @@ UserController.show.value=Encontrar un usuario por id
 UserController.create.value=Ingresar un nuevo usuario
 UserController.update.value=Actualizar los datos de un usuario por id
 UserController.delete.value=Eliminar un usuario por el id
+
+BookController.index.value=Encontrar el listado de todos los libros
+BookController.show.value=Encontrar un libro por id
+BookController.create.value=Ingresar un nuevo libro
+BookController.update.value=Actualizar los datos de un libro por id
+BookController.delete.value=Eliminar un libro por el id
